# datalogger

./: .gitignore  LICENSE.md  README.md
broker/: README.md  mosquitto.conf
broker/config/auth/: passwd.txt
documents/ESP32/: FLOW_DIAGRAM_ESP32.md  SEQUENCE_DIAGRAM_ESP32.md  UML_CLASS_DIAGRAM_ESP32.md
documents/STM32/: FLOW_DIAGRAM_STM32.md  SEQUENCE_DIAGRAM_STM32.md  UML_CLASS_DIAGRAM_STM32.md
documents/SYSTEM/: FLOW_DIAGRAM_SYSTEM.md  SEQUENCE_DIAGRAM_SYSTEM.md  UML_DIAGRAM_SYSTEM.md
documents/WEB/: FLOW_DIAGRAM_WEB.md  SEQUENCE_DIAGRAM_WEB.md  UML_DIAGRAM_WEB.md  UML_DIAGRAM_WEB_BACKUP.md
documents/firmware/: FLOW_DIAGRAM_FIRMWARE.md  SEQUENCE_DIAGRAM_FIRMWARE.md  UML_DIAGRAM_FIRMWARE.md
firmware/: README.md
firmware/ESP32/: CMakeLists.txt  README.md  partitions.csv
firmware/ESP32/components/button_handler/: CMakeLists.txt  Kconfig  README.md  button_config.h  button_handler.c  button_handler.h  component.mk
firmware/ESP32/components/coap_handler/: CMakeLists.txt  Kconfig  README.md  coap_handler.c  coap_handler.h  component.mk
firmware/ESP32/components/espressif__coap/: CHECKSUMS.json
firmware/ESP32/components/json_sensor_parser/: CMakeLists.txt  README.md  component.mk  json_sensor_parser.c  json_sensor_parser.h
firmware/ESP32/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/STM32/: README.md  STM32_DATALOGGER.ioc
firmware/STM32/Datalogger_Lib/: README.md
web/: README.md  README_DISPLAY_PREFERENCES.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  app.js  index.html  index_original_backup.html  style.css
(+86 files in other folders)
